# netvalidate

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
docs/: architecture.md
examples/profiles/: cisco_basic.yaml  huawei_basic.yaml  raisecom_basic.yaml
scripts/: smoke_test.sh  start.sh  stop.sh
src/netvalidate/: __init__.py  auth.py  config.py  main.py
src/netvalidate/api/: routes_health.py  routes_jobs.py  routes_profiles.py  routes_validate.py
src/netvalidate/connectivity/: manager.py
src/netvalidate/core/: runner.py
src/netvalidate/models/: db.py  schemas.py
src/netvalidate/profiles/: loader.py
src/netvalidate/storage/: repository.py
src/netvalidate/vendors/: __init__.py  base.py  cisco.py  huawei.py  raisecom.py
src/netvalidate/vendors/parsers/: cisco_parsers.py
tests/: test_api.py  test_cisco_collect.py  test_parsers_cisco.py  test_validators.py
